--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,44 +1,58 @@
 <mat-toolbar color="primary">
     <h1>Hanging Request</h1>
+    <span class="example-spacer"></span>
+    <button mat-raised-button (click)="signout()">
+      Sign Out
+    </button>
 </mat-toolbar>
 
 <div class="container">
+  <div class="top-content">
+
     <h2>Task List</h2>
-    <div class="content">
-        <div cdkDropListGroup>
+    <div class="button-wrapper">
+      <button mat-flat-button color="primary" (click)="addDialog()">
+        Create Task
+      </button>
+    </div>
 
-            <div class="example-container">
-              <h2>To do</h2>
+  </div>
+  
+  <div class="content">
+      <div cdkDropListGroup>
+
+          <div class="example-container">
+            <h2>To do</h2>
+            <div
+              cdkDropList
+              [cdkDropListData]="todo"
+              class="example-list"
+              (cdkDropListDropped)="drop($event)">
+              <div class="example-box" *ngFor="let item of todo" cdkDrag>{{item}}</div>
+            </div>
+          </div>
+
+          <div class="example-container">
+              <h2>Ongoing</h2>
               <div
                 cdkDropList
-                [cdkDropListData]="todo"
+                [cdkDropListData]="ongoing"
                 class="example-list"
                 (cdkDropListDropped)="drop($event)">
-                <div class="example-box" *ngFor="let item of todo" cdkDrag>{{item}}</div>
+                <div class="example-box" *ngFor="let item of ongoing" cdkDrag>{{item}}</div>
               </div>
             </div>
-
-            <div class="example-container">
-                <h2>Ongoing</h2>
-                <div
-                  cdkDropList
-                  [cdkDropListData]="ongoing"
-                  class="example-list"
-                  (cdkDropListDropped)="drop($event)">
-                  <div class="example-box" *ngFor="let item of ongoing" cdkDrag>{{item}}</div>
-                </div>
-              </div>
-          
-            <div class="example-container">
-              <h2>Done</h2>
-              <div
-                cdkDropList
-                [cdkDropListData]="done"
-                class="example-list"
-                (cdkDropListDropped)="drop($event)">
-                <div class="example-box" *ngFor="let item of done" cdkDrag>{{item}}</div>
-              </div>
+        
+          <div class="example-container">
+            <h2>Done</h2>
+            <div
+              cdkDropList
+              [cdkDropListData]="done"
+              class="example-list"
+              (cdkDropListDropped)="drop($event)">
+              <div class="example-box" *ngFor="let item of done" cdkDrag>{{item}}</div>
             </div>
+          </div>
 
         </div>
     </div>
