--- a/src/app/login-dialog/login-dialog.component.html
+++ b/src/app/login-dialog/login-dialog.component.html
@@ -3,7 +3,7 @@
         <h1>Login</h1>
     </div>
     <div class="login-form">
-        <form [formGroup]="loginForm">
+        <form [formGroup]="loginForm" (ngSubmit)="submit()">
             <div class="form-input">
                 <mat-form-field>
                     <mat-label>Email Address</mat-label>
@@ -13,7 +13,7 @@
             <div class="form-input">
                 <mat-form-field>
                     <mat-label>Password</mat-label>
-                    <input matInput formControlName="password"/>
+                    <input matInput type="password" formControlName="password"/>
                 </mat-form-field>
             </div>
             <div class="button-wrapper">
