--- a/src/app/add-task/add-task.component.html
+++ b/src/app/add-task/add-task.component.html
@@ -1,6 +1,6 @@
 <div class="content">
     <h2>Add Task</h2>
-    <form [formGroup]="addTask">
+    <form [formGroup]="addTask" (ngSubmit)="submit()">
 
         <div class="form-input">
             <mat-form-field>
