--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -28,7 +28,7 @@
               [cdkDropListData]="todo"
               class="example-list"
               (cdkDropListDropped)="drop($event)">
-              <div class="example-box" *ngFor="let item of todo" cdkDrag>{{item}}</div>
+              <div class="example-box" *ngFor="let item of todo" cdkDrag>{{item.title}}</div>
             </div>
           </div>
 
@@ -39,7 +39,7 @@
                 [cdkDropListData]="ongoing"
                 class="example-list"
                 (cdkDropListDropped)="drop($event)">
-                <div class="example-box" *ngFor="let item of ongoing" cdkDrag>{{item}}</div>
+                <div class="example-box" *ngFor="let item of ongoing" cdkDrag>{{item.title}}</div>
               </div>
             </div>
         
@@ -50,7 +50,7 @@
               [cdkDropListData]="done"
               class="example-list"
               (cdkDropListDropped)="drop($event)">
-              <div class="example-box" *ngFor="let item of done" cdkDrag>{{item}}</div>
+              <div class="example-box" *ngFor="let item of done" cdkDrag>{{item.title}}</div>
             </div>
           </div>
 
