--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -28,7 +28,27 @@
               [cdkDropListData]="todo"
               class="example-list"
               (cdkDropListDropped)="drop($event)">
-              <div class="example-box" *ngFor="let task of todo" (cdkDragEntered)="transferDone(task)" cdkDrag>
+              <div class="example-box" *ngFor="let task of todo" cdkDrag>
+                <mat-card>
+                  <h3>{{ task.title }}</h3>
+                  <span> {{ task.description }}</span>
+                  <mat-card-actions>
+                    <button mat-raised-button color="accent">Edit</button>
+                    <button mat-raised-button color="warn" (click)="db.delCreateTask(task)" >Delete</button>
+                  </mat-card-actions>
+                </mat-card>
+              </div>
+            </div>
+         </div>
+
+        <div class="example-container">
+            <h2>Ongoing</h2>
+            <div
+              cdkDropList
+              [cdkDropListData]="ongoing"
+              class="example-list"
+              (cdkDropListDropped)="drop($event)">
+              <div class="example-box" *ngFor="let task of ongoing" cdkDrag>
                 <mat-card>
                   <h3>{{ task.title }}</h3>
                   <span> {{ task.description }}</span>
@@ -39,8 +59,8 @@
                 </mat-card>
               </div>
             </div>
-         </div>
-        
+          </div>
+
           <div class="example-container">
             <h2>Done</h2>
             <div
@@ -48,11 +68,12 @@
               [cdkDropListData]="done"
               class="example-list"
               (cdkDropListDropped)="drop($event)">
-              <div class="example-box" *ngFor="let task of done" (cdkDragExited)="transferTodo(task)" cdkDrag>
+              <div class="example-box" *ngFor="let task of done" cdkDrag>
                 <mat-card>
                   <h3>{{ task.title }}</h3>
                   <span> {{ task.description }}</span>
                   <mat-card-actions>
+                    <button mat-raised-button color="accent">Edit</button>
                     <button mat-raised-button color="warn">Delete</button>
                   </mat-card-actions>
                 </mat-card>
