--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -10,6 +10,10 @@
                 <div class="button-wrapper">
                     <button mat-raised-button color="primary" (click)="loginDialog()">Login with email</button>
                 </div>
+
+                <div class="button-wrapper">
+                    <button mat-raised-button style="background-color: orange;" (click)="auth.GoogleAuth()">Login with Google</button>
+                </div>
                 
                 <div class="seperator"><span>------ OR -----</span></div>
 
