--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -12,10 +12,10 @@
                 </div>
 
                 <div class="button-wrapper">
-                    <button mat-raised-button style="background-color: orange;" (click)="auth.GoogleAuth()">Login with Google</button>
+                    <button mat-raised-button color="accent" (click)="auth.GoogleAuth()">Login with Google</button>
                 </div>
                 
-                <div class="seperator"><span>------ OR -----</span></div>
+                <div class="seperator"><span>------ OR ------</span></div>
 
                 <div class="button-wrapper">
                     <button mat-raised-button color="accent" (click)="signInDialog()">Create account</button>
