--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar color="primary">
-    <h1>Hanging Request</h1>
+    <h1>Hanging Task</h1>
 </mat-toolbar>
 
 <div class="main">
@@ -11,10 +11,6 @@
                     <button mat-raised-button color="primary" (click)="loginDialog()">Login with email</button>
                 </div>
 
-                <div class="button-wrapper">
-                    <button mat-raised-button color="accent" (click)="auth.GoogleAuth()">Login with Google</button>
-                </div>
-                
                 <div class="seperator"><span>------ OR ------</span></div>
 
                 <div class="button-wrapper">
