--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar color="primary">
     <h1>Hanging Task</h1>
     <span class="example-spacer"></span>
-    <button mat-raised-button>
+    <button mat-raised-button (click)="logout()">
       Sign Out
     </button>
 </mat-toolbar>
