--- a/src/app/signup-dialog/signup-dialog.component.html
+++ b/src/app/signup-dialog/signup-dialog.component.html
@@ -6,6 +6,18 @@
         <form [formGroup]="signInForm" (ngSubmit)="submit()">
             <div class="form-input">
                 <mat-form-field>
+                    <mat-label>First Name</mat-label>
+                    <input matInput formControlName="firstName"/>
+                </mat-form-field>
+            </div>
+            <div class="form-input">
+                <mat-form-field>
+                    <mat-label>Last Name</mat-label>
+                    <input matInput formControlName="lastName"/>
+                </mat-form-field>
+            </div>
+            <div class="form-input">
+                <mat-form-field>
                     <mat-label>Email Address</mat-label>
                     <input matInput formControlName="email"/>
                 </mat-form-field>
