--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -28,14 +28,14 @@
               cdkDropList
               [cdkDropListData]="todo"
               class="example-list"
-              (cdkDropListDropped)="drop($event)">
+              (cdkDropListDropped)="drop($event, 'todo')">
               <div class="example-box" *ngFor="let task of todo" cdkDrag>
                 <mat-card>
-                  <h3>{{ task.title }}</h3>
+                  <h3>{{ task.title.toUpperCase() }}</h3>
                   <span> {{ task.description }}</span>
                   <mat-card-actions>
-                    <button mat-raised-button color="primary" (click)="editDialog(task,'-todo')">Edit</button>
-                    <button mat-raised-button color="warn" (click)="this.db.deleteTask(task.id)">Delete</button>
+                    <button mat-raised-button color="primary" (click)="editDialog(task)">Edit</button>
+                    <button mat-raised-button color="warn" (click)="delete(task)">Delete</button>
                   </mat-card-actions>
                 </mat-card>
               </div>
@@ -48,7 +48,7 @@
               cdkDropList
               [cdkDropListData]="ongoing"
               class="example-list"
-              (cdkDropListDropped)="drop($event)">
+              (cdkDropListDropped)="drop($event, 'ongoing')">
               <div class="example-box" *ngFor="let task of ongoing" cdkDrag>
                 <mat-card>
                   <h3>{{ task.title.toUpperCase() }}</h3>
@@ -56,10 +56,10 @@
                 
                   <mat-card-actions>
                     <div class="button-wrapper">
-                      <button mat-raised-button color="primary" (click)="editDialog(task,'-ongoing')">Edit</button>
+                      <button mat-raised-button color="primary" (click)="editDialog(task)">Edit</button>
                     </div>
                     <div class="button-wrapper">
-                      <button mat-raised-button color="warn">Delete</button>
+                      <button mat-raised-button color="warn" (click)="delete(task)">Delete</button>
                     </div>
                   </mat-card-actions>
                 </mat-card>
@@ -73,14 +73,14 @@
               cdkDropList
               [cdkDropListData]="done"
               class="example-list"
-              (cdkDropListDropped)="drop($event)">
+              (cdkDropListDropped)="drop($event, 'done')">
               <div class="example-box" *ngFor="let task of done" cdkDrag>
                 <mat-card>
                   <h3>{{ task.title.toUpperCase() }}</h3>
                   <span> {{ task.description }}</span>
                   <mat-card-actions>
-                    <button mat-raised-button color="primary" (click)="editDialog(task,'-done')">Edit</button>
-                    <button mat-raised-button color="warn">Delete</button>
+                    <button mat-raised-button color="primary" (click)="editDialog(task)">Edit</button>
+                    <button mat-raised-button color="warn" (click)="delete(task)">Delete</button>
                   </mat-card-actions>
                 </mat-card>
               </div>
