--- a/src/app/login-dialog/login-dialog.component.html
+++ b/src/app/login-dialog/login-dialog.component.html
@@ -21,4 +21,7 @@
             </div>
         </form>
     </div>
+    <div class="footer">
+        <span>Forgot password?</span>
+    </div>
 </div>
