--- a/src/app/login-dialog/login-dialog.component.html
+++ b/src/app/login-dialog/login-dialog.component.html
@@ -20,8 +20,10 @@
                 <button mat-raised-button color="primary" type="submit">Login</button>
             </div>
         </form>
-    </div>
-    <div class="footer">
-        <span>Forgot password?</span>
+        
+        <div class="forget">
+            <a (click)="forgotPassword()">Forgot Password?</a>
+        </div>
+
     </div>
 </div>
