--- a/src/app/add-task/add-task.component.html
+++ b/src/app/add-task/add-task.component.html
@@ -1,5 +1,6 @@
 <div class="content">
-    <h2>Add Task</h2>
+    <mat-icon style="float: right; cursor: pointer;" color="warn" (click)="this.dialogRef.close()">cancel</mat-icon>
+    <h1 style="padding-top: 14px; font-weight: 550;">Create Task</h1>
     <form [formGroup]="addTask" (ngSubmit)="submit()">
 
         <div class="form-input">
