--- a/src/app/forgot-password/forgot-password.component.html
+++ b/src/app/forgot-password/forgot-password.component.html
@@ -1,14 +1,14 @@
 <div class="content">
     <h1>Find your account</h1>
     <p>Please enter your email to search for your account.</p>
-    <form [formGroup]="emailForm">
+    <form [formGroup]="emailForm" (ngSubmit)="submit()">
         <mat-form-field>
             <mat-label>Email Address</mat-label>
             <input matInput formControlName="email"/>
         </mat-form-field>
         
         <div class="button-wrapper">
-            <button mat-raised-button (click)="this.dialog.close()">Cancel</button> &nbsp; &nbsp; 
+            <button mat-raised-button (click)="this.dialog.close()">Cancel</button>
             <button mat-raised-button color="primary" type="submit">Search</button>
         </div>
     </form>
