add filter search

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -24,11 +24,15 @@
       <div class="filter">
         <button mat-raised-button [matMenuTriggerFor]="menu">User</button>
         <mat-menu #menu="matMenu">
-          <mat-option (click)="selectedUser = ''">All</mat-option>
-          <mat-option *ngFor="let user of userList" (click)="select(user.first_name, user.last_name)">
+          <mat-option (click)="select('none')">All</mat-option>
+          <mat-option *ngFor="let user of userList" (click)="select(user.first_name+' '+user.last_name)">
             {{user.first_name}} {{user.last_name}}
           </mat-option>
         </mat-menu>
+        <div class="search">
+          <input matInput #search autocomplete="off" placeholder="Search..." [(ngModel)]="searchData">
+          <button (click)="onSearch(searchData)"><mat-icon style="color: black; cursor: pointer;">search</mat-icon></button>
+        </div>
       </div>
     
       <div cdkDropListGroup>
@@ -60,42 +64,21 @@
               (cdkDropListDropped)="drop($event, 'ongoing')">
               <h2>Ongoing</h2>
               <div class="example-box" *ngFor="let task of ongoing" cdkDrag>
-                
-                <ng-container *ngIf="selectedUser !== ''; else default ">
-                  <mat-card *ngIf="selectedUser == task.assign_to">
-                    <h3>{{ task.title }}</h3>
-                    <span> {{ task.description }}</span>
-                    <div class="assign">
-                      <span style="font-size: 16px;">Assign to: {{ task.assign_to }}</span>
+                <mat-card>
+                  <h3>{{ task.title }}</h3>
+                  <span> {{ task.description }}</span>
+                  <div class="assign">
+                    <span style="font-size: 16px;">Assign to: {{ task.assign_to }}</span>
+                  </div>
+                  <mat-card-actions>
+                    <div class="button-wrapper">
+                      <button mat-raised-button color="primary" (click)="editDialog(task)">Edit</button>
                     </div>
-                    <mat-card-actions>
-                      <div class="button-wrapper">
-                        <button mat-raised-button color="primary" (click)="editDialog(task)">Edit</button>
-                      </div>
-                      <div class="button-wrapper">
-                        <button mat-raised-button color="warn" (click)="delete(task)">Delete</button>
-                      </div>
-                    </mat-card-actions>
-                  </mat-card>
-                </ng-container>
-
-                <ng-template #default>
-                  <mat-card>
-                    <h3>{{ task.title }}</h3>
-                    <span> {{ task.description }}</span>
-                    <div class="assign">
-                      <span style="font-size: 16px;">Assign to: {{ task.assign_to }}</span>
+                    <div class="button-wrapper">
+                      <button mat-raised-button color="warn" (click)="delete(task)">Delete</button>
                     </div>
-                    <mat-card-actions>
-                      <div class="button-wrapper">
-                        <button mat-raised-button color="primary" (click)="editDialog(task)">Edit</button>
-                      </div>
-                      <div class="button-wrapper">
-                        <button mat-raised-button color="warn" (click)="delete(task)">Delete</button>
-                      </div>
-                    </mat-card-actions>
-                  </mat-card>
-                </ng-template>
+                  </mat-card-actions>
+                </mat-card>
 
               </div>
             </div>
@@ -109,41 +92,21 @@
               (cdkDropListDropped)="drop($event, 'done')">
               <h2>Done</h2>
               <div class="example-box" *ngFor="let task of done" cdkDrag>
-                <ng-container *ngIf="selectedUser !== ''; else default ">
-                  <mat-card *ngIf="selectedUser == task.assign_to">
-                    <h3>{{ task.title }}</h3>
-                    <span> {{ task.description }}</span>
-                    <div class="assign">
-                      <span style="font-size: 16px;">Assign to: {{ task.assign_to }}</span>
+                <mat-card>
+                  <h3>{{ task.title }}</h3>
+                  <span> {{ task.description }}</span>
+                  <div class="assign">
+                    <span style="font-size: 16px;">Assign to: {{ task.assign_to }}</span>
+                  </div>
+                  <mat-card-actions>
+                    <div class="button-wrapper">
+                      <button mat-raised-button color="primary" (click)="editDialog(task)">Edit</button>
                     </div>
-                    <mat-card-actions>
-                      <div class="button-wrapper">
-                        <button mat-raised-button color="primary" (click)="editDialog(task)">Edit</button>
-                      </div>
-                      <div class="button-wrapper">
-                        <button mat-raised-button color="warn" (click)="delete(task)">Delete</button>
-                      </div>
-                    </mat-card-actions>
-                  </mat-card>
-                </ng-container>
-
-                <ng-template #default>
-                  <mat-card>
-                    <h3>{{ task.title }}</h3>
-                    <span> {{ task.description }}</span>
-                    <div class="assign">
-                      <span style="font-size: 16px;">Assign to: {{ task.assign_to }}</span>
+                    <div class="button-wrapper">
+                      <button mat-raised-button color="warn" (click)="delete(task)">Delete</button>
                     </div>
-                    <mat-card-actions>
-                      <div class="button-wrapper">
-                        <button mat-raised-button color="primary" (click)="editDialog(task)">Edit</button>
-                      </div>
-                      <div class="button-wrapper">
-                        <button mat-raised-button color="warn" (click)="delete(task)">Delete</button>
-                      </div>
-                    </mat-card-actions>
-                  </mat-card>
-                </ng-template>
+                  </mat-card-actions>
+                </mat-card>
 
               </div>
             </div>
