--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -20,6 +20,31 @@
 
 .filter {
   margin-bottom: 8px;
+  display: flex;
+  align-items: center;
+}
+
+.filter .search {
+  margin-left: 12px;
+  background-color: white;
+  padding: 7px;
+  border-radius: 17px;
+  display: flex;
+  align-items: center;
+  width: 140px;
+}
+
+.search button{
+  background-color: transparent;
+}
+
+.search input{
+  font-size: 16px;
+  width: 100px;
+}
+
+.search input:focus{
+  outline: none;
 }
 
 .top-content {
